@@ -1,3 +1,10 @@
+2001-05-14	Till Straumann <strauman@slac.stanford.edu>
+
+	* Per PR212, added envlock support for newlib.  This is used
+	by at least getenv()/putenv() to avoid race conditions.
+	* libc/envlock.c: New file.
+	* libc/Makefile.am: Modified to reflect above.
+
 2002-05-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>	
 
 	* include/Makefile.am: Remove.
